# gis-phl

./: .gitignore  AI_RULES.md  Makefile  README.md  pyproject.toml
core/: README.md
docs/: scaling_research_for_teams.md  structuring_research_projects.md
evaluation/: README.md  __init__.py  comparison.py
evaluation/notebooks/: 01_experiment_comparison.ipynb
experiments/: README.md  __init__.py  tracking.py
experiments/exp_000_template/: README.md  run_spec.yaml
experiments/exp_001_baseline_rent_growth/: README.md  run_spec.yaml
experiments/exp_002_philly_consistent_baseline/: README.md  run_spec.yaml
experiments/exp_003_philly_region_zip_panel/: README.md  run_spec.yaml
exploration/: README.md
exploration/notebooks/: 01_data_source_investigation.ipynb  02_entity_sanity_checks.ipynb
exploration/ontology/: README.md  __init__.py  build_entities.py  build_zillow_theory_sample.py  entities.py  zillow_theory_sample.yaml
exploration/profiling/: README.md
gis_proto/: demo_01.ipynb  vector_map.html
ingestion/: README.md  minimal_ingest.py
ingestion/ontology/: README.md  build_entities.py  map_to_entities.py
ingestion/scripts/: cleanup_tmp_keep_entities.sh
ingestion/source_audit/: README.md  analyze.py
ingestion/sources/: README.md  common.py
ingestion/sources/acs_5y/: README.md  (+1 more)
investigations/: README.md  plotting.py
investigations/inv_001_target_behavior/: README.md
scripts/: install_jupyter_kernel.sh  remove_jupyter_kernel.sh
tests/: test_evaluation_comparison.py  test_exp001_smoke.py  test_ontology_mapping.py  test_tracking.py
(+75 files in other folders)
